# Ozon3

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FILE_STRUCTURE.md  README.md  getcityair.py  getspecificparam.py  index.md  methods.md  params.json  requirements.txt  setup.cfg  setup.py  updateVersion.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  codeql-analysis.yml  greetings.yml  lint.yml  package-publish.yml  stale.yml  take.yml  test.yml
_layouts/: template.html
ozone/: ozone.py  urls.py
src/ozon3/: __init__.py  ozon3.py  urls.py
src/ozon3/historical/: __init__.py
src/ozone/: __init__.py  ozone.py  scraping.py  urls.py
src/ozone/historical/: __init__.py  _reverse_engineered.py  collector.py  relevant_funcs.js  relevant_funcs.py
src/ozone3/: __init__.py  ozone3.py  urls.py
tests/: README.md  conftest.py  test_get_city_air.py  test_get_city_forecast.py  test_get_city_station_options.py  test_get_coordinate_air.py  test_get_historical_data.py  test_get_multiple_city_air.py  test_get_multiple_coordinate_air.py  test_get_range_coordinates_air.py  test_get_specific_parameter.py  utils.py
tests/cassettes/: ozon3_init.yaml  ozone_init.yaml
tests/cassettes/test_get_city_air/: test_bad_city.yaml  test_bad_data_format.yaml  test_column_expected_contents.yaml  test_column_types.yaml  test_correct_data_format.yaml  test_excluded_params.yaml  test_nonexistent_requested_params.yaml  test_output_data_format_bad.yaml  test_output_data_formats[csv].yaml  test_output_data_formats[json].yaml  test_output_data_formats[xlsx].yaml  test_return_value_and_format.yaml
tests/cassettes/test_get_city_forecast/: test_bad_city_input.yaml  test_bad_data_format_input.yaml  test_column_types.yaml  test_correct_data_format_input.yaml  test_index_and_column_types.yaml  test_output_data_format_bad_input.yaml  test_output_data_formats[csv].yaml  test_output_data_formats[json].yaml  test_output_data_formats[xlsx].yaml  test_return_value_and_format.yaml
tests/cassettes/test_get_city_station_options/: test_columns.yaml  test_no_output_directory.yaml  test_nonexistent_city.yaml  test_return_value_and_format.yaml  test_score_column.yaml
tests/cassettes/test_get_coordinate_air/: test_bad_coordinates.yaml  test_bad_data_format.yaml  test_column_expected_contents.yaml  test_column_types.yaml  test_excluded_params.yaml  test_nonexistent_requested_params.yaml  test_output_data_format_bad.yaml  test_output_data_formats[csv].yaml  test_output_data_formats[json].yaml  test_output_data_formats[xlsx].yaml  test_output_formats.yaml  test_return_value_and_format.yaml
tests/cassettes/test_get_historical_data/: test_column_types.yaml  test_correct_data_format.yaml  test_output_data_formats[csv].yaml  test_output_data_formats[json].yaml  test_output_data_formats[xlsx].yaml  test_return_value_and_format.yaml  (+1 more)
(+39 files in other folders)
