[metadata]
name = ozon3
version = 1.0.2
author = Milind Sharma
author_email = milindsharma8@gmail.com
description = A package to get air quality data using the WAQI API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Milind220/Ozone
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

install_requires=
    pandas==1.4.1
    numpy==1.22.2
    requests==2.27.1
    