[metadata]
name = ozon3
version = 1.5.3
author = Milind Sharma
author_email = milindsharma8@gmail.com
description = A package to get air quality data using the WAQI API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Milind220/Ozone
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

install_requires=
    pandas
    numpy
    requests
    openpyxl
    ratelimit

[flake8]
# Configure flake8 to work with black's style
max-line-length = 88
extend-ignore = E203
