[metadata]
name = ozon3
version = 3.0.0
author = Milind Sharma
author_email = milindsharma8@gmail.com
description = An open-source package to easily obtain real-time, historical, or forecasted air quality data for anywhere in the world. Reliable, accurate and simple.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Milind220/Ozone3
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

install_requires=
    pandas
    numpy
    requests
    openpyxl
    ratelimit
    js2py
    sseclient-py

[flake8]
# Configure flake8 to work with black's style
max-line-length = 88
extend-ignore = E203
